Configuracion final del playbook. Instalacion de zabbix server y agent en Ubuntu y compilacion de zabbix server y agent para dispositivos con arquitectura armhf (raspberry)

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -1,7 +1,6 @@
 ---
 - name: Bootstraping
-  hosts: 192.168.32.161 #Tiene que ser variable
-  remote_user: administrator #Tiene que ser variable
+  hosts: all
   become_method: sudo
   gather_facts: no
 
