--- a/roles/zabbix-server/vars/main.yml
+++ b/roles/zabbix-server/vars/main.yml
@@ -1,10 +1,8 @@
 ---
-zabbix_server: '192.168.6.200'
-zabbix_version: '3.4.6'
-zabbix_source_url: 'https://sourceforge.net/projects/zabbix/files/ZABBIX%20Latest%20Stable/3.4.6/zabbix-{{zabbix-version}}.tar.gz'
-zabbix_source_directory: '/opt/zabbix-{{zabbix-version}}'
-zabbix_conf_directory: '/etc/zabbix'
-zabbix_frontend_directory: '/var/www/html/zabbix'
-db_name: 'zabbix'
-db_user: 'zabbix'
-db_password: 'zabbix-server'
+zabbix_major_version: '3.4'
+zabbix_minor_version: '3.4.1'
+zabbix_repo_url: 'http://repo.zabbix.com/zabbix/{{zabbix_major_version}}/ubuntu/pool/main/z/zabbix-release/zabbix-release_{{zabbix_major_version}}-1+xenial_all.deb'
+zabbix_server_name: 'Zabbix Nodo'
+#db_name: 'zabbix'
+#db_user: 'zabbix'
+#db_password: 'zabbix-server'
