--- a/zabbix-server.yml
+++ b/zabbix-server.yml
@@ -1,16 +1,13 @@
 ---
 - name: Deploying Zabbix-Server
-  hosts: 192.168.32.161 #Tiene que ser variable
-  remote_user: administrator #Tiene que ser variable
+  hosts: all
   become_method: sudo
   gather_facts: yes
 
   roles:
-    #- ssh
     #- snmp
-    #- ntp
-    - openssl
-    - apache
+    - ntp
     - postgresql
-    - zabbix-server
-    #- zabbix-agent
+    - {role: zabbix-server-agent-compilation, when: ansible_architecture == "armv7l"}
+    - {role: zabbix-server, when: ansible_architecture == "x86_64"}
+    - {role: zabbix-agent, when: ansible_architecture == "x86_64"}
