--- a/roles/ntp/tasks/main.yml
+++ b/roles/ntp/tasks/main.yml
@@ -1,9 +1,14 @@
 ---
 - name: Installing ntp
-    apt: name=ntp state=present
-    become: yes
+  apt:
+    name: ntp
+    state: present
+  become: yes
 
 - name: Copying ntp configuration
-    template: src=ntp.conf dest=/etc/ntp.conf backup=yes
-    notify: restart ntp
-    become: yes
+  template:
+    src: ntp.conf
+    dest: /etc/ntp.conf
+    backup: yes
+  notify: restart ntp
+  become: yes
