Se agrego la instalacion de la dependencia fping al rol zabbix-server-agent-compilation y se modifico la configuracion del template zabbix_server.conf en el mismo rol

--- a/roles/zabbix-server-agent-compilation/templates/zabbix_server.conf
+++ b/roles/zabbix-server-agent-compilation/templates/zabbix_server.conf
@@ -493,7 +493,7 @@ Timeout=4
 #
 # Mandatory: no
 # Default:
-# FpingLocation=/usr/sbin/fping
+FpingLocation=/usr/bin/fping
 
 ### Option: Fping6Location
 #	Location of fping6.
