--- a/roles/zabbix-server-agent-compilation/templates/zabbix.conf
+++ b/roles/zabbix-server-agent-compilation/templates/zabbix.conf
@@ -1,9 +1,9 @@
 # Define /zabbix alias, this is the default
 <IfModule mod_alias.c>
-    Alias /zabbix /var/www/html/zabbix
+    Alias /zabbix {{zabbix_frontend_directory}}
 </IfModule>
 
-<Directory "/var/www/html/zabbix">
+<Directory "{{zabbix_frontend_directory}}">
     Options FollowSymLinks
     AllowOverride None
     Order allow,deny
@@ -20,7 +20,7 @@
     </IfModule>
 </Directory>
 
-<Directory "/var/www/html/zabbix/conf">
+<Directory "{{zabbix_frontend_directory}}/conf">
     Order deny,allow
     Deny from all
     <files *.php>
@@ -29,7 +29,7 @@
     </files>
 </Directory>
 
-<Directory "/var/www/html/zabbix/app">
+<Directory "{{zabbix_frontend_directory}}/app">
     Order deny,allow
     Deny from all
     <files *.php>
@@ -38,7 +38,7 @@
     </files>
 </Directory>
 
-<Directory "/var/www/html/zabbix/include">
+<Directory "{{zabbix_frontend_directory}}/include">
     Order deny,allow
     Deny from all
     <files *.php>
@@ -47,7 +47,7 @@
     </files>
 </Directory>
 
-<Directory "/var/www/html/zabbix/local">
+<Directory "{{zabbix_frontend_directory}}/local">
     Order deny,allow
     Deny from all
     <files *.php>
