--- a/roles/zabbix-server-agent-compilation/templates/zabbix_agentd.conf
+++ b/roles/zabbix-server-agent-compilation/templates/zabbix_agentd.conf
@@ -142,7 +142,7 @@ ServerActive=127.0.0.1
 # Default:
 # Hostname=
 
-Hostname=Zabbix server
+Hostname={{zabbix_server_name}}
 
 ### Option: HostnameItem
 #	Item used for generating Hostname if it is undefined. Ignored if Hostname is defined.
