Se agrego soporte a mysql tanto en instalacion desde fuentes como instalacion desde repositorios

--- a/roles/database/tasks/main.yml
+++ b/roles/database/tasks/main.yml
@@ -37,13 +37,12 @@
   become: yes
   when: db_engine == 'MYSQL'
 
-- name: creating database user and password
-  become: yes
-  mysql_user: name={{db_user}} password={{db_password}}
-  when: db_engine == 'MYSQL'
-
 - name: creating database
   become: yes
   mysql_db: name={{db_name}} state={{db_state}}
   when: db_engine == 'MYSQL'
-   
+
+- name: creating database user and password
+  become: yes
+  mysql_user: name={{db_user}} password={{db_password}} collation=utf8_bin encoding=UTF-8 priv='zabbix.*:ALL,GRANT' state=present
+  when: db_engine == 'MYSQL'
