--- a/roles/zabbix-server/tasks/main.yml
+++ b/roles/zabbix-server/tasks/main.yml
@@ -12,6 +12,7 @@
     update_cache: yes
   with_items:
     - php7.0-pgsql
+    - php7.0-mysql
     - php7.0-xml
     - php7.0-bcmath
     - php7.0-mbstring
@@ -26,7 +27,7 @@
     state: present
   become: yes
 
-- name: Installing zabbix server
+- name: Installing zabbix server with postgresql support
   apt:
     name: "{{item}}"
     state: present
@@ -34,13 +35,54 @@
   with_items:
     - zabbix-server-pgsql
     - zabbix-frontend-php
+    - python-psycopg2
   become: yes
+  when: db_engine == 'POSTGRESQL'
 
-- name: Importing zabbix data into the database
+- name: creating postgresql database user and password
+  become: yes
+  become_user: postgres
+  postgresql_user: name={{db_user}} password={{db_password}}
+  when: db_engine == 'POSTGRESQL'                 
+
+- name: creating postgresql database
+  become: yes
+  become_user: postgres
+  postgresql_db: name={{db_name}} owner={{db_user}} state={{db_state}}
+  when: db_engine == 'POSTGRESQL'  
+
+- name: Importing zabbix data into the postgresql database
   shell: zcat /usr/share/doc/zabbix-server-pgsql/create.sql.gz | psql zabbix
   become: yes
   become_user: zabbix
-  when: zabbix_server_stats.stat.exists == False
+  when: zabbix_server_stats.stat.exists == False and db_engine == 'POSTGRESQL'
+
+- name: Installing zabbix server with mysql support
+  apt:
+    name: "{{item}}"
+    state: present
+    update_cache: yes
+  with_items:
+    - zabbix-server-mysql
+    - zabbix-frontend-php
+    - python-mysqldb
+  become: yes
+  when: db_engine == 'MYSQL'
+
+- name: creating mysql database
+  become: yes
+  mysql_db: name={{db_name}} state={{db_state}} collation=utf8_bin encoding=utf8
+  when: db_engine == 'MYSQL'
+
+- name: creating mysql database user and password
+  become: yes
+  mysql_user: name={{db_user}} password={{db_password}} priv='zabbix.*:ALL,GRANT' state=present
+  when: db_engine == 'MYSQL'
+
+- name: Importing zabbix data into the mysql database
+  shell: zcat /usr/share/doc/zabbix-server-mysql/create.sql.gz | mysql -u{{db_user}} -p{{db_password}} {{db_name}}
+  become: yes
+  when: zabbix_server_stats.stat.exists == False and db_engine == 'MYSQL'
 
 - name: Starting zabbix server and enabling it on system startup
   shell: update-rc.d zabbix-server enable
