--- a/hosts.ini
+++ b/hosts.ini
@@ -1,3 +1,3 @@
 [zabbix-servers]
-192.168.32.161 ansible_user=administrator
-#192.168.3.4 ansible_user=raspberry
+192.168.32.161 ansible_user=administrator ansible_ssh_pass=Sa0.C0n43
+#192.168.3.5 ansible_user=ubuntu ansible_ssh_pass=raspberry01
