--- a/roles/zabbix-server/vars/main.yml
+++ b/roles/zabbix-server/vars/main.yml
@@ -3,6 +3,8 @@ zabbix_major_version: '3.4'
 zabbix_minor_version: '3.4.1'
 zabbix_repo_url: 'http://repo.zabbix.com/zabbix/{{zabbix_major_version}}/ubuntu/pool/main/z/zabbix-release/zabbix-release_{{zabbix_major_version}}-1+xenial_all.deb'
 zabbix_server_name: 'Zabbix Nodo'
-#db_name: 'zabbix'
-#db_user: 'zabbix'
-#db_password: 'zabbix-server'
+zabbix_server: 'localhost'
+db_name: 'zabbix'
+db_user: 'zabbix'
+db_password: 'zabbix-server'
+db_engine: 'POSTGRESQL'
