--- a/zabbix-server.yml
+++ b/zabbix-server.yml
@@ -7,8 +7,7 @@
   roles:
     #- snmp
     - ntp
-    - database
-    - zabbix-server-agent-compilation
-    #- {role: zabbix-server-agent-compilation, when: ansible_architecture == "armv7l"}
-    #- {role: zabbix-server, when: ansible_architecture == "x86_64"}
-    #- {role: zabbix-agent, when: ansible_architecture == "x86_64"}
+    - {role: database, when: ansible_architecture == "armv7l"}
+    - {role: zabbix-server-agent-compilation, when: ansible_architecture == "armv7l"}
+    - {role: zabbix-server, when: ansible_architecture == "x86_64"}
+    - {role: zabbix-agent, when: ansible_architecture == "x86_64"}
