Se modifico el archivo hosts

--- a/roles/zabbix-server-agent-compilation/tasks/main.yml
+++ b/roles/zabbix-server-agent-compilation/tasks/main.yml
@@ -11,7 +11,7 @@
     dest: /opt
     remote_src: yes
   become: yes
-  #when: zabbix_bin_stats.stat.exists == False
+  when: zabbix_bin_stats.stat.exists == False
 
 - name: Creating group for zabbix server user
   group:
