Modificacion de ubicacion de variables. Se utiliza el archivo zabbix_servers.yml para colocar todas las variables globales a todos los hosts

--- a/roles/database/tasks/main.yml
+++ b/roles/database/tasks/main.yml
@@ -2,23 +2,23 @@
 
 #POSTGRESQL
 
-- name: installing dependencies
+- name: Installing ansible postgresql module dependencies
   apt: name=python-psycopg2 state=present
   become: yes
   when: db_engine == 'POSTGRESQL'  
 
-- name: installing postgresql
+- name: Installing postgresql server
   apt: name=postgresql state=present
   become: yes
   when: db_engine == 'POSTGRESQL'
 
-- name: creating database user and password
+- name: Creating postgresql database user and password
   become: yes
   become_user: postgres
   postgresql_user: name={{db_user}} password={{db_password}}
   when: db_engine == 'POSTGRESQL'                 
 
-- name: creating database
+- name: Creating postgresql database
   become: yes
   become_user: postgres
   postgresql_db: name={{db_name}} owner={{db_user}} state={{db_state}}
@@ -27,22 +27,22 @@
 
 #MYSQL
 
-- name: installing dependencies
+- name: Installing ansible mysql module dependencies
   apt: name=python-mysqldb state=present
   become: yes
   when: db_engine == 'MYSQL'
 
-- name: installing mysql server
+- name: Installing mysql server
   apt: name=mysql-server state=present
   become: yes
   when: db_engine == 'MYSQL'
 
-- name: creating database
+- name: Creating mysql database
   become: yes
-  mysql_db: name={{db_name}} state={{db_state}} collation=utf8_bin encoding=utf8
+  mysql_db: name={{db_name}} state={{db_state}} collation={{db_collation}} encoding={{db_encoding}}
   when: db_engine == 'MYSQL'
 
-- name: creating database user and password
+- name: Creating mysql database user and password
   become: yes
   mysql_user: name={{db_user}} password={{db_password}} priv='zabbix.*:ALL,GRANT' state=present
   when: db_engine == 'MYSQL'
