Support for raspbian was added. Fix issue #1

--- a/roles/zabbix-agent/tasks/main.yml
+++ b/roles/zabbix-agent/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Downloading e installing zabbix repositories
   apt:
-    deb: "{{zabbix_repo_url}}"
+    deb: "{{ZBX_REPO_URL}}"
     state: present
   become: yes
 
