--- a/group_vars/zabbix-servers.yml
+++ b/group_vars/zabbix-servers.yml
@@ -1,14 +1,23 @@
 ---
-#Variables comunes a todos los hosts del grupo zabbix-servers
+#Common variables to all zabbix-servers group hosts
+
+#ZBX Variables
+ansible_python_interpreter: /usr/bin/python3
 db_name: 'zabbix'
 db_user: 'zabbix'
 db_password: 'zabbix-server'
-db_engine: 'POSTGRESQL'
+db_engine: 'MYSQL'
 db_state: 'present'
 db_encoding: 'utf8'
 db_collation: 'utf8_bin'
-zabbix_server_name: 'Zabbix Nodo'
+ZBX_TIMEZONE: 'America/Argentina/Cordoba'
+zabbix_server_name: 'ZBX-MEGA'
 zabbix_server: 'localhost'
-zabbix_major_version: '3.4'
-zabbix_minor_version: '3.4.1'
-zabbix_repo_url: 'http://repo.zabbix.com/zabbix/{{zabbix_major_version}}/ubuntu/pool/main/z/zabbix-release/zabbix-release_{{zabbix_major_version}}-1+xenial_all.deb'
+zabbix_major_version: '4.2'
+zabbix_minor_version: '4.2'
+ZBX_REPO_URL: 'https://repo.zabbix.com/zabbix/4.2/ubuntu/pool/main/z/zabbix-release/zabbix-release_4.2-1+bionic_all.deb'
+#zabbix_repo_url: 'https://repo.zabbix.com/zabbix/4.2/raspbian/pool/main/z/zabbix-release/zabbix-release_4.2-1+stretch_all.deb'
+
+#NTP Variables
+NTP_SERVER: ""
+
