Repo updated in order to add support to zabbix instalation in raspberry pi without compilation

--- a/roles/rsyslog/tasks/main.yml
+++ b/roles/rsyslog/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: Copying rsyslog configuration
   template:
-    src: {{ items }}
+    src: "{{ items }}"
     dest: /etc/{{ items }}
     backup: yes
   notify: restart rsyslog
