--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,3 @@
 ---
-- import_playbook: bootstrap.yml
-- import_playbook: zabbix-server.yml
-
-
-
-
-    
+- include: bootstrap.yml
+- include: zabbix-server.yml
