Conditional variable ZBX_DB_RESTORE was added in order to choose if import zabbix initial data or restore data from a backup of another zher zabbix instance. Some uneeded files were removed

--- a/roles/rsyslog/tasks/main.yml
+++ b/roles/rsyslog/tasks/main.yml
@@ -7,8 +7,8 @@
 
 - name: Copying rsyslog configuration
   template:
-    src: "{{ items }}"
-    dest: /etc/{{ items }}
+    src: "{{ item }}"
+    dest: /etc/{{ item }}
     backup: yes
   notify: restart rsyslog
   become: yes
@@ -20,6 +20,6 @@
 - name: Configuring logrotate
   template:
     src: mikrotik-logs
-    dst: /etc/logrotate.d/
-  backup: yes
+    dest: /etc/logrotate.d/
+    backup: yes
   become: yes   
