--- a/roles/zabbix-agent/templates/zabbix_agentd.conf
+++ b/roles/zabbix-agent/templates/zabbix_agentd.conf
@@ -92,7 +92,7 @@ LogFileSize=0
 # Default:
 # Server=
 
-Server={{zabbix_server}}
+Server={{ZBX_SERVER_IP}}
 
 ### Option: ListenPort
 #	Agent will listen on this port for connections from the server.
@@ -133,7 +133,7 @@ Server={{zabbix_server}}
 # Default:
 # ServerActive=
 
-ServerActive={{zabbix_server}}
+ServerActive={{ZBX_SERVER_IP}}
 
 ### Option: Hostname
 #	Unique, case sensitive hostname.
