Added START_POLLERS variable in zabbix-servers group_var

--- a/roles/zabbix-server/templates/zabbix_server.conf
+++ b/roles/zabbix-server/templates/zabbix_server.conf
@@ -161,7 +161,7 @@ DBPassword={{db_password}}
 # Mandatory: no
 # Range: 0-1000
 # Default:
-# StartPollers=5
+StartPollers={{START_POLLERS}}
 
 ### Option: StartIPMIPollers
 #	Number of pre-forked instances of IPMI pollers.
