--- a/group_vars/zabbix-servers.yml
+++ b/group_vars/zabbix-servers.yml
@@ -21,6 +21,8 @@ ZBX_DB_RESTORE: 'TRUE' #True if we want to restore a backup from another zabbix 
 ZBX_REPO_URL: 
   RASPBIAN: 'https://repo.zabbix.com/zabbix/4.2/raspbian/pool/main/z/zabbix-release/zabbix-release_4.2-1+stretch_all.deb'
   BIONIC: 'https://repo.zabbix.com/zabbix/4.2/ubuntu/pool/main/z/zabbix-release/zabbix-release_4.2-1+bionic_all.deb'
+START_POLLERS: 5
+
 
 #NTP Variables
 NTP_SERVER: "192.168.40.1"
